# athenak

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  README.md  background_adapted_residual_gauge_goal.md  build.sh  cmk.sh  codex_cluster_handoff_prompt.md  config.hpp.in  configure.sh  envs.sh  gnc_stability_parameter_scan_prompt.md  instability_debug.md  orbit_cluster_transfer_prompt.md  performance.md  porting_report.md  residual_gauge_debug_goal.md  residual_gauge_proposal.tex  run.sbatch  scratch_fix.patch  setup.cfg  tov_stability.md  z4c_background_subtraction_audit.tex
src/: AGENTS.md  CMakeLists.txt  athena.hpp  athena_arrays.hpp  athena_tensor.hpp  file_sharding.hpp  globals.cpp  globals.hpp  main.cpp  parameter_input.cpp  parameter_input.hpp
src/adm/: adm.cpp  adm.hpp
src/bns_nurates/: get_nurates.sh
src/bvals/: AGENTS.md  boundary_flag.cpp  boundary_flag.hpp  buffs_cc.cpp  buffs_fc.cpp  bvals.cpp  bvals.hpp  bvals_cc.cpp  bvals_cc_orb.cpp  bvals_fc.cpp  bvals_part.cpp  bvals_tasks.cpp  cc_recv.cpp  cc_send.cpp  cc_sendreceive.cpp  flux_correct_cc.cpp  flux_correct_fc.cpp  outflow.cpp  prolong_prims.cpp  prolongation.cpp  recv_buffers.cpp  reflect.cpp  send_buffers.cpp
src/chemistry/: chemistry.cpp  chemistry.hpp  chemistry_tasks.cpp  chemistry_utils.hpp
src/coordinates/: AGENTS.md  adm.cpp  adm.hpp  cartesian_ks.hpp  cell_locations.hpp  coordinates.cpp  coordinates.hpp  excision.cpp  laplacian.hpp
src/cyclic_zoom/: cyclic_zoom.cpp  cyclic_zoom.hpp  zoom_criteria.cpp  zoom_data.cpp  zoom_datablock.cpp  zoom_efld.cpp  zoom_fluxes.cpp  zoom_loadbalance.cpp  zoom_mask.cpp  zoom_mesh.cpp  zoom_physics.cpp  zoom_refinement.cpp  zoom_region.cpp  zoom_restart.cpp  zoom_srcterms.cpp
src/diffusion/: AGENTS.md  ambipolar.cpp  ambipolar_diffusion.cpp  ambipolar_diffusion.hpp  conduction.cpp  conduction.hpp  current_density.hpp  iso_visc.cpp  newtonian.cpp  ohmic.cpp  parabolic_process.hpp  resistivity.cpp  resistivity.hpp  sts_rkl2.cpp  sts_rkl2.hpp  sts_types.hpp  viscosity.cpp  viscosity.hpp
src/driver/: AGENTS.md  driver.cpp  driver.hpp
src/dyn_grmhd/: AGENTS.md  dyn_grmhd.cpp  dyn_grmhd.hpp  dyn_grmhd_fluxes.cpp  dyn_grmhd_fofc.cpp  dyn_grmhd_util.hpp  valencia_stress_energy.hpp
src/dyn_radiation/: dyn_radiation.cpp  dyn_radiation.hpp  dyn_radiation_fluxes.cpp  dyn_radiation_newdt.cpp  dyn_radiation_opacities.hpp  dyn_radiation_source.cpp  dyn_radiation_tasks.cpp  dyn_radiation_tetrad.cpp  dyn_radiation_tetrad.hpp  dyn_radiation_update.cpp
src/dyngr/: dyngr.cpp  dyngr.hpp  dyngr_fluxes.cpp  dyngr_fofc.cpp  dyngr_util.hpp
src/eos/: AGENTS.md  adiabatic_grhyd.cpp  adiabatic_hyd.cpp  adiabatic_hydro.cpp  adiabatic_hydro_gr.cpp  adiabatic_hydro_rel.cpp  adiabatic_hydro_sr.cpp  adiabatic_mhd.cpp  adiabatic_srhyd.cpp  cgl_mhd.cpp  eos.cpp  eos.hpp  ideal_c2p_hyd.hpp  ideal_c2p_mhd.hpp  ideal_grhyd.cpp  ideal_grmhd.cpp  ideal_hyd.cpp  ideal_hyd.hpp  ideal_mhd.cpp  ideal_mhd.hpp  ideal_srhyd.cpp  ideal_srmhd.cpp  isothermal_hyd.cpp  isothermal_hydro.cpp  isothermal_mhd.cpp  noop_dyngrmhd.cpp  primitive_solver_hyd.hpp
src/geodesic-grid/: AGENTS.md  gauss_legendre.cpp  gauss_legendre.hpp  geodesic_grid.cpp  geodesic_grid.hpp  spherical_grid.cpp  spherical_grid.hpp
src/gravity/: gravity.cpp  gravity.hpp  mg_gravity.cpp  mg_gravity.hpp
src/hydro/: AGENTS.md  hydro.cpp  hydro.hpp  hydro_divflux.cpp  hydro_dual_energy.cpp  hydro_fluxes.cpp  hydro_fofc.cpp  hydro_newdt.cpp  hydro_source_terms.cpp  hydro_sts.cpp  hydro_tasks.cpp  hydro_update.cpp
src/ion-neutral/: AGENTS.md  ion-neutral.cpp  ion-neutral.hpp  ion-neutral_tasks.cpp  ion_neutral.cpp  ion_neutral.hpp
src/mesh/: AGENTS.md  build_tree.cpp  cyclic_zoom.cpp  cyclic_zoom.hpp  geodesic_grid.cpp  geodesic_grid.hpp  interface_physics.cpp  load_balance.cpp  mesh.cpp  mesh.hpp  mesh_physics.cpp  mesh_positions.hpp  mesh_refinement.cpp  mesh_refinement.hpp  meshblock.cpp  meshblock.hpp  meshblock_pack.cpp  meshblock_pack.hpp  meshblock_tree.cpp  meshblock_tree.hpp  prolong.hpp  prolongation.hpp  refinement_criteria.cpp  refinement_criteria.hpp  restriction.hpp  spherical_grid.cpp  spherical_grid.hpp  zoom_criteria.cpp  zoom_data.cpp  zoom_mesh.cpp  zoom_physics.cpp  zoom_refinement.cpp  zoom_restart.cpp
src/mhd/: AGENTS.md  mhd.cpp  mhd.hpp  mhd_calc_fluxes.cpp  mhd_corner_e.cpp  mhd_ct.cpp  mhd_diagnostics.cpp  mhd_dissipation.cpp  mhd_dual_energy.cpp  mhd_entropyfix.cpp  mhd_fluxes.cpp  mhd_fofc.cpp  mhd_newdt.cpp  mhd_sts.cpp  mhd_tasks.cpp  mhd_update.cpp
src/multigrid/: multigrid.cpp  multigrid.hpp  multigrid_driver.cpp  multigrid_tasks.cpp
src/numerical-relativity/: numerical_relativity.cpp  numerical_relativity.hpp
src/ode_solvers/: forward_euler.hpp  ode_solvers.hpp
src/outputs/: AGENTS.md  azimuthal_average.cpp  basetype_output.cpp  binary.cpp  cartgrid.cpp  coarsened_binary.cpp  derived_variables.cpp  eventlog.cpp  formatted_table.cpp  geodesic_surface.cpp  history.cpp  hydro_output.cpp  io_wrapper.cpp  io_wrapper.hpp  mhd_output.cpp  output_type.cpp  output_vars.cpp  outputs.cpp  outputs.hpp  pdf.cpp  restart.cpp  rst_prtcl.cpp  spherical_shells.cpp  spherical_slice.cpp  spherical_surface.cpp  track_prtcl.cpp  vtk.cpp  vtk_mesh.cpp  vtk_part.cpp  vtk_prtcl.cpp
src/particles/: AGENTS.md  boris_gr.cpp  gca_gr.cpp  hamiltonian_gr.hpp  particles.cpp  particles.hpp  particles_pushers.cpp  particles_tasks.cpp
src/pgen/: AGENTS.md  B_part.cpp  acc.cpp  advection.cpp  bbh_torus.cpp  bhl.cpp  blast.cpp  boosted_bondi.cpp  cbd.cpp  ccsn.cpp  cgm_cooling_flow_amr_metals.cpp  cgm_cooling_flow_full.cpp  cgm_cooling_flow_full_dust.cpp  cgm_cooling_flow_no_disk.cpp  cgm_cooling_flow_zoom.cpp  chevalier_clegg.cpp  circumbinary.cpp  cshock.cpp  current_sheet.cpp  diffusion_2d.cpp  diffusion_test.cpp  disk-magnetosphere.cpp  disk-magnetosphere_pp.cpp  dynbbh.cpp  dynbbh_beam.cpp  dynbbh_read_harm.cpp  dyngr_cooling_test.cpp  dyngr_neutrino_shock.cpp  dyngr_tov.cpp  dyngr_tov_MHD.cpp  elliptica.cpp  (+88 more)
(+1418 files in other folders)
